Set ComponentDefinition Role and Type correctly.